# z_example

./: CMakeLists.txt  CODEOWNERS  Kconfig.zephyr  MAINTAINERS.yml  west.yml
.github/workflows/: hello_world_multiplatform.yaml  twister_tests_blackbox.yml
arch/: Kconfig
arch/riscv/: Kconfig
boards/: deprecated.cmake
cmake/: mcuboot.cmake
cmake/emu/: qemu.cmake
cmake/modules/: configuration_files.cmake  dts.cmake  extensions.cmake  kconfig.cmake  kernel.cmake
doc/: board_catalog.yaml
doc/_scripts/: gen_boards_catalog.py
doc/releases/: Kconfig  migration-guide-3.7.rst  migration-guide-4.0.rst  release-notes-3.7.rst  release-notes-4.0.rst
drivers/: CMakeLists.txt  Kconfig
drivers/adc/: adc_esp32.c  adc_mcux_lpadc.c  adc_nrfx_saadc.c  adc_tla2021.c  adc_tla202x.c
drivers/clock_control/: CMakeLists.txt  Kconfig
drivers/clock_mgmt/: CMakeLists.txt  Kconfig  clock_mgmt_common.c  clock_mgmt_common.h  clock_mgmt_drivers.h  clock_source.c  fixed_clock_source.c
drivers/clock_mgmt/nxp_syscon/: CMakeLists.txt  nxp_lpc55sxx_pll.c  nxp_lpc55sxx_pll.h  nxp_syscon.h  nxp_syscon_div.c  nxp_syscon_flexfrg.c  nxp_syscon_gate.c  nxp_syscon_mux.c  nxp_syscon_rtcclk.c  nxp_syscon_source.c
drivers/crypto/: Kconfig.nxp_s32_hse  crypto_nxp_s32_hse.c
drivers/display/: display_dummy.c
drivers/dma/: dma_mcux_edma.c  dma_mcux_lpc.c  dma_si32.c
kernel/: Kconfig  init.c  msg_q.c  thread.c  userspace.c
modules/: Kconfig  Kconfig.mcuboot  Kconfig.renesas_fsp
scripts/: west-commands.yml
submanifests/: optional.yaml
subsys/: CMakeLists.txt  Kconfig
(+565 files in other folders)
